trunk/OldArchive/c9c8703bdb66485c9bdd663ae3ba6691-7063104e283ed82d51a6fde7370c6e59/output
main.cpp: In function 'int main(int, char**)':
main.cpp:142:12: error: two consecutive '[' shall only introduce an attribute before '[' token
     Haskell[ []( int x ) { return x * x; } | build( 1, to, 20 ), []( int x ){ return x * x > 144; ];
            ^
main.cpp:142:44: error: expected ',' or ';' before '|' token
     Haskell[ []( int x ) { return x * x; } | build( 1, to, 20 ), []( int x ){ return x * x > 144; ];
                                            ^
main.cpp:146:1: error: expected '}' at end of input
 }
 ^
